added action-section and body bg-color

--- a/index.html
+++ b/index.html
@@ -21,8 +21,15 @@
             <button class="all-button">Stay Focused</button>
         </div>
     </header>
-    <main class="default-side-margin">
-
+    <main class="main-bg-color">
+        <section class="action-section default-side-margin body-section-top-padding">
+            <div class="action-section-contents">
+                <h3 class="action-title font-raleway">See It in Action</h3>
+                <p class="action-description font-raleway">Explore the live preview and imagine your brand in this bold new look.</p>
+                <button class="all-button">Launch Live Preview</button>
+            </div>
+            <img src="./assets/wc-mini.png" alt="Webflow-config-2022" class="action-img">
+        </section>
     </main>
 </body>
 </html>
