--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <p class="action-description font-raleway">Explore the live preview and imagine your brand in this bold new look.</p>
                 <button class="all-button">Launch Live Preview</button>
             </div>
-            <img src="./assets/wc-mini.png" alt="Webflow-config-2022" class="action-img">
+            <img src="assets/wc-mini.png" alt="Webflow-config-2022" class="action-img">
         </section>
     </main>
 </body>
