changed styles file position

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="header">
@@ -28,7 +28,7 @@
                 <p class="action-description font-raleway">Explore the live preview and imagine your brand in this bold new look.</p>
                 <button class="all-button">Launch Live Preview</button>
             </div>
-            <img src="assets/wc-mini.png" alt="Webflow-config-2022" class="action-img">
+            <img src="assets/wc-mini.png" alt="web-flow-config-2022" class="action-img">
         </section>
     </main>
 </body>
