removed assets folder

--- a/index.html
+++ b/index.html
@@ -30,6 +30,26 @@
             </div>
             <img src="assets/wc-mini.png" alt="web-flow-config-2022" class="action-img">
         </section>
+        <!-- ^section one -->
+        <section class="productive-user-section">
+            <div class="user-section-contents">
+                <h4 class="user-section-title">Joined Thousands of Productive Users</h4>
+                <div class="user-surveys"></div>
+                <div class="user-survey">
+                    <h1 class="survey-title"></h1>
+                    <p class="survey-sub-title"></p>
+                </div>
+                <div class="user-survey">
+                    <h1 class="survey-title"></h1>
+                    <p class="survey-sub-title"></p>
+                </div>
+                <div class="user-survey">
+                    <h1 class="survey-title"></h1>
+                    <p class="survey-sub-title"></p>
+                </div>
+            </div>
+        </section>
+        <!-- ^section two -->
     </main>
 </body>
 </html>
