added productive-user-section and user-review-section

--- a/index.html
+++ b/index.html
@@ -31,25 +31,80 @@
             <img src="assets/wc-mini.png" alt="web-flow-config-2022" class="action-img">
         </section>
         <!-- ^section one -->
-        <section class="productive-user-section">
+        <section class="productive-user-section default-side-margin">
             <div class="user-section-contents">
-                <h4 class="user-section-title">Joined Thousands of Productive Users</h4>
-                <div class="user-surveys"></div>
-                <div class="user-survey">
-                    <h1 class="survey-title"></h1>
-                    <p class="survey-sub-title"></p>
-                </div>
-                <div class="user-survey">
-                    <h1 class="survey-title"></h1>
-                    <p class="survey-sub-title"></p>
-                </div>
-                <div class="user-survey">
-                    <h1 class="survey-title"></h1>
-                    <p class="survey-sub-title"></p>
-                </div>
+                <h4 class="user-section-title font-raleway">Joined Thousands of Productive Users</h4>
+                <div class="user-surveys">
+                    <div class="user-survey font-inter">
+                        <h1 class="survey-title">50K</h1>
+                        <p class="survey-sub-title">Active Users</p>
+                    </div>
+                    <div class="user-survey font-inter">
+                        <h1 class="survey-title">2M+</h1>
+                        <p class="survey-sub-title">Focus Sessions</p>
+                    </div>
+                    <div class="user-survey font-inter">
+                        <h1 class="survey-title">95%</h1>
+                        <p class="survey-sub-title">Satisfaction Rate</p>
+                    </div>
+                </div>    
             </div>
         </section>
         <!-- ^section two -->
+        <section class="user-review-section default-side-margin font-raleway">
+            <h3 class="user-review-section-title font-raleway">What our users say</h3>
+            <div class="user-reviews-cards">
+                <div class="user-review-card">
+                        <img src="./assets/icon-star.png" alt="" class="ster-icons">
+                        <img src="./assets/icon-star.png" alt="" class="ster-icons">
+                        <img src="./assets/icon-star.png" alt="" class="ster-icons">
+                        <img src="./assets/icon-star.png" alt="" class="ster-icons">
+                        <img src="./assets/icon-star.png" alt="" class="ster-icons">
+                        <h3 class="user-review-title">Loved by Designers</h3>
+                        <p class="user-review">This template instantly leveled up our presence.” – Studio Vertex</p>
+                        <div class="user-info">
+                            <img src="./assets/avatar.png" alt="user-img" class="user-img">
+                            <div class="user-text-info">
+                                <p class="user-name">Reviewer name</p>
+                                <p class="date">Date</p>
+                            </div>
+                        </div>
+                </div>
+                <div class="user-review-card">
+                        <img src="./assets/icon-star.png" alt="" class="ster-icons">
+                        <img src="./assets/icon-star.png" alt="" class="ster-icons">
+                        <img src="./assets/icon-star.png" alt="" class="ster-icons">
+                        <img src="./assets/icon-star.png" alt="" class="ster-icons">
+                        <img src="./assets/icon-star.png" alt="" class="ster-icons">
+                        <h3 class="user-review-title">Loved by Designers</h3>
+                        <p class="user-review">This template instantly leveled up our presence.” – Studio Vertex</p>
+                        <div class="user-info">
+                            <img src="./assets/avatar.png" alt="user-img" class="user-img">
+                            <div class="user-text-info">
+                                <p class="user-name">Reviewer name</p>
+                                <p class="date">Date</p>
+                            </div>
+                        </div>
+                </div>
+                <div class="user-review-card">
+                        <img src="./assets/icon-star.png" alt="" class="ster-icons">
+                        <img src="./assets/icon-star.png" alt="" class="ster-icons">
+                        <img src="./assets/icon-star.png" alt="" class="ster-icons">
+                        <img src="./assets/icon-star.png" alt="" class="ster-icons">
+                        <img src="./assets/icon-star.png" alt="" class="ster-icons">
+                        <h3 class="user-review-title">Loved by Designers</h3>
+                        <p class="user-review">This template instantly leveled up our presence.” – Studio Vertex</p>
+                        <div class="user-info">
+                            <img src="./assets/avatar.png" alt="user-img" class="user-img">
+                            <div class="user-text-info">
+                                <p class="user-name">Reviewer name</p>
+                                <p class="date">Date</p>
+                            </div>
+                        </div>
+                </div>
+            </div>
+        </section>
+        <!-- section three -->
     </main>
 </body>
 </html>
