added a new section named focus

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                         <div class="user-info">
                             <img src="./assets/avatar.png" alt="user-img" class="user-img">
                             <div class="user-text-info">
-                                <p class="user-name">Reviewer name</p>
-                                <p class="date">Date</p>
+                                <p class="user-name">Maya Brooks</p>
+                                <p class="date">February 3, 2025</p>
                             </div>
                         </div>
                 </div>
@@ -76,13 +76,13 @@
                         <img src="./assets/icon-star.png" alt="" class="ster-icons">
                         <img src="./assets/icon-star.png" alt="" class="ster-icons">
                         <img src="./assets/icon-star.png" alt="" class="ster-icons">
-                        <h3 class="user-review-title">Loved by Designers</h3>
-                        <p class="user-review">This template instantly leveled up our presence.” – Studio Vertex</p>
+                        <h3 class="user-review-title">Game-Changer for Our Brand</h3>
+                        <p class="user-review">Sleek design, easy customization—clients love it.” – HexaLab Studio</p>
                         <div class="user-info">
                             <img src="./assets/avatar.png" alt="user-img" class="user-img">
                             <div class="user-text-info">
-                                <p class="user-name">Reviewer name</p>
-                                <p class="date">Date</p>
+                                <p class="user-name">Alina Rivera</p>
+                                <p class="date">June 9, 2025</p>
                             </div>
                         </div>
                 </div>
@@ -92,19 +92,28 @@
                         <img src="./assets/icon-star.png" alt="" class="ster-icons">
                         <img src="./assets/icon-star.png" alt="" class="ster-icons">
                         <img src="./assets/icon-star.png" alt="" class="ster-icons">
-                        <h3 class="user-review-title">Loved by Designers</h3>
-                        <p class="user-review">This template instantly leveled up our presence.” – Studio Vertex</p>
+                        <h3 class="user-review-title">Modern Look, Zero Effort</h3>
+                        <p class="user-review">This dark UI instantly gave our site a sharp, professional vibe.” – Noir Digital</p>
                         <div class="user-info">
                             <img src="./assets/avatar.png" alt="user-img" class="user-img">
                             <div class="user-text-info">
-                                <p class="user-name">Reviewer name</p>
-                                <p class="date">Date</p>
+                                <p class="user-name">Aiko Nakamura</p>
+                                <p class="date">May 15, 2025</p>
                             </div>
                         </div>
                 </div>
             </div>
         </section>
-        <!-- section three -->
+        <!-- ^section three -->
+         <section class="focus-section default-side-margin">
+            <div class="focus-contents font-raleway">
+                <h2 class="focus-title">Ready to focus better</h2>
+                <p class="focus-sub-title">This template instantly leveled up our presence.” – Studio Vertex</p>
+                <button class="focus-section-button all-button">Ger Started Free</button>
+                <img src="./assets/wc-big.png" alt="web-flow image" class="focus-img">
+            </div>
+         </section>
+         <!-- ^section four -->
     </main>
 </body>
 </html>
