added contract and footer sections

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <div class="user-info">
                             <img src="./assets/avatar.png" alt="user-img" class="user-img">
                             <div class="user-text-info">
-                                <p class="user-name">Maya Brooks</p>
+                                <p class="user-name"><strong>Maya Brooks</strong></p>
                                 <p class="date">February 3, 2025</p>
                             </div>
                         </div>
@@ -81,7 +81,7 @@
                         <div class="user-info">
                             <img src="./assets/avatar.png" alt="user-img" class="user-img">
                             <div class="user-text-info">
-                                <p class="user-name">Alina Rivera</p>
+                                <p class="user-name"><strong>Alina Rivera</strong></p>
                                 <p class="date">June 9, 2025</p>
                             </div>
                         </div>
@@ -97,7 +97,7 @@
                         <div class="user-info">
                             <img src="./assets/avatar.png" alt="user-img" class="user-img">
                             <div class="user-text-info">
-                                <p class="user-name">Aiko Nakamura</p>
+                                <p class="user-name"><strong>Aiko Nakamura</strong> </p>
                                 <p class="date">May 15, 2025</p>
                             </div>
                         </div>
@@ -114,6 +114,41 @@
             </div>
          </section>
          <!-- ^section four -->
+         <section class="contract-section default-side-margin">
+            <div class="contract-contents">
+                <h1 class="contract-title font-raleway">Let’s Get in Touch</h1>
+                <div class="contract-input">
+                    <form class="contract-form">
+                        <div class="input-type">
+                            <label for="email" class="font-inter">Email</label>
+                            <input type="email" id="email" placeholder="example@email.com" class="font-inter" required>
+                        </div>
+                        <div class="input-type">
+                            <label for="name" class="font-inter">Name</label>
+                            <input type="text" id="name" placeholder="full name" class="font-inter" required>
+                        </div>
+                        <div class="input-type">
+                            <label for="message" class="font-inter">Message</label>
+                            <textarea id="message" rows="5" placeholder="write your message...." class="font-inter" required></textarea>
+                        </div>
+                        <button type="submit" class="font-raleway all-button contract-button">Get in Touch</button>
+                    </form>
+                </div>
+            </div>
+         </section>
+         <!-- ^section five -->
     </main>
+    <footer>
+        <div class="footer-section font-inter">
+            <h1 class="footer-logo">LOGO</h1>
+            <p class="footer-description">Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
+            <div class="footer-nav">
+                <a href="https://codeofmaple.github.io/my-first-assignment/"><p>Home</p></a>
+                <a href="#"><p>About</p></a>
+                <a href="#"><p>How it Works</p></a>
+                <a href="#"><p>Services</p></a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
