--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <header class="header">
         <nav class="nav-section  default-side-margin">
             <h3 class="nav-logo font-inter">LOGO</h3>
-            <button class="all-button font-raleway">Sign Up</button>
+            <button class="all-button font-raleway" type="button">Sign Up</button>
         </nav>
         <div class="banner-section">
             <h1 class="banner-heading font-raleway">Cool Dark UI Template for Webflow Agencies!</h1>
-            <button class="all-button">Stay Focused</button>
+            <button class="all-button" type="button">Stay Focused</button>
         </div>
     </header>
     <main class="main-bg-color">
@@ -26,7 +26,7 @@
             <div class="action-section-contents">
                 <h3 class="action-title font-raleway">See It in Action</h3>
                 <p class="action-description font-raleway">Explore the live preview and imagine your brand in this bold new look.</p>
-                <button class="all-button">Launch Live Preview</button>
+                <button class="all-button" type="button">Launch Live Preview</button>
             </div>
             <img src="assets/wc-mini.png" alt="web-flow-config-2022" class="action-img">
         </section>
@@ -109,7 +109,7 @@
             <div class="focus-contents font-raleway">
                 <h2 class="focus-title">Ready to focus better</h2>
                 <p class="focus-sub-title">This template instantly leveled up our presence.” – Studio Vertex</p>
-                <button class="focus-section-button all-button">Ger Started Free</button>
+                <button class="focus-section-button all-button" type="button">Ger Started Free</button>
                 <img src="./assets/wc-big.png" alt="web-flow image" class="focus-img">
             </div>
          </section>
